--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
-    </dependency>
+  </dependency>
+  <dependency>
+    <groupId>com.oracle</groupId>
+    <artifactId>ojdbc6</artifactId>
+   <version>1.0.0</version>
+  </dependency>
   </dependencies>
 </project>
