adding DB utils

--- a/pom.xml
+++ b/pom.xml
@@ -68,5 +68,10 @@
     <artifactId>ojdbc6</artifactId>
     <version>1.0.0</version>
   </dependency>
+    <dependency>
+      <groupId>commons-dbutils</groupId>
+      <artifactId>commons-dbutils</artifactId>
+      <version>1.6</version>
+    </dependency>
   </dependencies>
 </project>
